# single-gpu-agi-lab

./: .gitignore  AGENTS.md  LICENSE  MILESTONES.md  README.md  ROADMAP.md  pyproject.toml
configs/: README.md
datasets/: README.md
docs/: arc-agi-3-constraints-and-scoring.md  core-resources.md  high-level-plan.md  human-brain.md  lab-thesis.md  learning-loop.md  milestone-0-acceptance.md  static-to-interactive-arc-transfer.md
docs/week-01/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md
experiments/: README.md
experiments/exp_0001_adamw_from_scratch/: README.md  materials.md  session_0001.md
experiments/exp_0002_tiny_gpt/: README.md
experiments/exp_0003_arc_baseline/: README.md
model_cards/: README.md
notebooks/: README.md
notebooks/templates/: daily-lab-template.ipynb  experiment-template.ipynb
notebooks/week-01/: day-01-lab-map.ipynb  day-02-local-model-benchmarks.ipynb  day-03-data-and-tokenization.ipynb  day-04-first-qlora-plan.ipynb  day-05-eval-baseline.ipynb  day-06-preference-tuning-notes.ipynb  day-07-week-review.ipynb
papers/: README.md
papers/000_measure_of_intelligence/: README.md  card.md
papers/001_attention_is_all_you_need/: README.md
papers/002_lora/: README.md
papers/003_dpo/: README.md
results/: README.md
scripts/: arc_run_agent.sh  eval.sh  serve_vllm.sh  setup_env.sh  setup_gpu_env.sh  train.sh  verify_gpu_stack.py
templates/: implementation-session-template.md  paper-implementation-card.md  x-post-template.md
tests/: test_adam_optimizers.py  test_package_import.py
(+16 files in other folders)
